--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -102,6 +102,7 @@
             column.FieldName = "dc_para_conciliar";
             column.Caption = "Se concilia";
             column.Width = Unit.Percentage(10);
+            column.Visible = false;
             column.EditorProperties().CheckBox(sp =>
             {
 
