--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAbono/_GridViewPartial_prestamos_abono.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAbono/_GridViewPartial_prestamos_abono.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.UI.WebControls;
     @{
         var grid = Html.DevExpress().GridView(settings => {
-            settings.Name = "GridView_prestamos";
-            settings.CallbackRouteValues = new { Controller = "Prestamos", Action = "GridViewPartial_prestamos", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+            settings.Name = "GridViewPartial_prestamos_abono";
+            settings.CallbackRouteValues = new { Controller = "PrestamosAbono", Action = "GridViewPartial_prestamos_abono", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
 
             settings.Width = Unit.Percentage(100);
             settings.KeyFieldName = "IdPrestamo";
