--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -27,12 +27,7 @@
     @Html.HiddenFor(q => q.IdEmpleado);
     <div class="row">
         <div class="col-md-12">
-
-
             <div class="col-md-2">
-
-
-
                 <script type="text/javascript">
                     function onUploadControlFileUploadComplete(s, e) {
                         if (e.isValid)
@@ -144,12 +139,6 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-
-
-        </div>
-    </div>
     <div id="Tabs" role="tabpanel">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -558,9 +547,8 @@
                     </div>
                 </div>
 
-                <div class="row" id="horas">
+                <div class="row">
                     <div class="col-md-12">
-
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="Pago_por_horas"></label>
@@ -568,51 +556,52 @@
                            {
                                settings.Name = "Pago_por_horas";
                                settings.Text = "Pago por horas";
-
+                               settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){mostrar_horas();}";
                            }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.Pago_por_horas, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_horas">Valor hora vespertina</label>
-                                @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_maximo_horas">Horas máxima vespertina</label>
-                                @Html.TextBoxFor(q => q.Valor_maximo_horas_vesp, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_maximo_horas_vesp, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_horas">Valor hora matutina</label>
-                                @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_maximo_horas">Horas máxima matutina</label>
-                                @Html.TextBoxFor(q => q.Valor_maximo_horas_mat, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_maximo_horas_mat, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_horas">Valor hora brigada</label>
-                                @Html.TextBoxFor(q => q.Valor_horas_brigada, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_horas_brigada, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                        <div id="DivPagoHoras">
 
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora vespertina</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_maximo_horas">Horas máxima vespertina</label>
+                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_vesp, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_vesp, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora matutina</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_maximo_horas">Horas máxima matutina</label>
+                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_mat, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_mat, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2" >
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora brigada</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_brigada, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_brigada, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
-
 
                 <div class="row">
                     <div class="col-md-12">
@@ -661,12 +650,32 @@
                                 @Html.ValidationMessageFor(q => q.Tiene_ingresos_compartidos, "", new { @class = "text-danger" })
                             </div>
                         </div>
+
+
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="GozaMasDeQuinceDiasVaciones"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.GozaMasDeQuinceDiasVaciones, settings =>
+                           {
+                               settings.Name = "GozaMasDeQuinceDiasVaciones";
+                               settings.Text = "Goza más de 15 días de vacaciones";
+                               settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){dias_vacaciones();}";
+                           }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.GozaMasDeQuinceDiasVaciones, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div id="Divdias">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="DiasVacaciones">Días vacaciones</label>
+                                    @Html.TextBoxFor(q => q.DiasVacaciones, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.DiasVacaciones, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-
-
-
 
 
             </div>
@@ -821,9 +830,12 @@
 
 
 <script>
+    mostrar_horas();
+    dias_vacaciones();
     $("#pe_cedulaRuc").keyup(function () {
         validar();
     });
+
     function validar() {
         var tipo_doc = $("#IdTipoDocumento").val();
         var cedula = $("#pe_cedulaRuc").val();
@@ -847,12 +859,23 @@
     }
 
     function mostrar_horas() {
-        if (!Pago_por_horas.GetValue()) {
-            $("#horas").show();
-
+        var Pago = Pago_por_horas.GetValue();
+        if (Pago == true) {
+            $("#DivPagoHoras").show();
         }
         else {
-            $("#horas").hide();
+            $("#DivPagoHoras").hide();
+        }
+    };
+
+    
+    function dias_vacaciones() {
+        var dias = GozaMasDeQuinceDiasVaciones.GetValue();
+        if (dias == true) {
+            $("#Divdias").show();
+        }
+        else {
+            $("#Divdias").hide();
         }
     };
 
