--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Prestamos";
+    ViewBag.Title = "Aprobación de prestamos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_prestamos", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_prestamos_aprobacion", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
