--- a/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/Nuevo.cshtml
@@ -6,60 +6,20 @@
     //{
     //    Response.Redirect("~/Account/Login");
     //}
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
 }
-<script src="~/Scripts/jquery-1.11.3.min.js"></script>
-<script src="~/bower_DevExpress/knockout/dist/knockout.debug.js"></script>
-<script src="~/bower_DevExpress/knockout/dist/knockout.js"></script>
-
-<script src="~/bower_DevExpress/cldrjs/dist/cldr.js"></script>
-<script src="~/bower_DevExpress/cldrjs/dist/cldr/event.js"></script>
-<script src="~/bower_DevExpress/cldrjs/dist/cldr/supplemental.js"></script>
-<script src="~/bower_DevExpress/cldrjs/dist/cldr/unresolved.js"></script>
-
-<script src="~/bower_DevExpress/globalize-1.3.0/dist/globalize.js"></script>
-<script src="~/bower_DevExpress/globalize-1.3.0/dist/globalize/message.js"></script>
-<script src="~/bower_DevExpress/globalize-1.3.0/dist/globalize/number.js"></script>
-<script src="~/bower_DevExpress/globalize-1.3.0/dist/globalize/currency.js"></script>
-<script src="~/bower_DevExpress/globalize-1.3.0/dist/globalize/date.js"></script>
-
-
-
-<script src="~/bower_DevExpress/ace-builds/src/ace.js"></script>
-<script src="~/bower_DevExpress/ace-builds/src/ext-language_tools.js"></script>
-<script src="~/Scripts/theme-dreamweaver.js"></script>
-<script src="~/Scripts/theme-ambiance.js"></script>
-
-
-<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
 
 @using (Html.BeginForm("Nuevo", "DisenadorReporte", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    <head>
-
-
-
-    </head>
-
-    @Html.DevExpress().GetScripts(
-        new Script { ExtensionSuite = ExtensionSuite.Report }
-    )
-
+{ 
+    
     @Html.DevExpress().ReportDesigner(settings =>
-    {
-        settings.Name = "ReportDesigner";
+    {        
+        settings.Name = "File_Disenio_Reporte";
     }).Bind(new Core.Erp.Web.Reportes.Facturacion.FAC_003_Rpt()).GetHtml()
-
+    
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","DisenadorReporte",new { Area = "General" },null)">Cancelar</a>
     </div>
-
-
-
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
 }
 
