--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
@@ -127,6 +127,30 @@
                                 @Html.ValidationMessageFor(q => q.Porcentaje_aporte_pers, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                        
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="IdTipo_op">Estado prestamos*</label>
+                                        @Html.DevExpress().ComboBoxFor(q => q.EstadoCreacionPrestamos, settings =>
+                                           {
+                                               settings.Name = "EstadoCreacionPrestamos";
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                               settings.Properties.Columns.Add("CodCatalogo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                               settings.Properties.Columns.Add("ca_descripcion", "Catalogo").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                               //Campo ID
+                                               settings.Properties.ValueField = "CodCatalogo";
+                                               settings.Properties.ValueType = typeof(string);
+                                               settings.Properties.TextField = "ca_descripcion";
+                                               //Boton para seleccionar ningun registro
+                                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                           }).BindList(ViewBag.lst_estado_prestamo).GetHtml()
+                                        @Html.ValidationMessageFor(q => q.EstadoCreacionPrestamos, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                          
 
                     </div>
                 </div>
@@ -151,7 +175,7 @@
                            }).GetHtml()
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label for="IdTipo_op">Tipo orden sueldo por pagar*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_sueldo_por_pagar, settings =>
@@ -188,7 +212,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label for="IdTipo_op">Tipo OP para prestamos*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_prestamos, settings =>
@@ -226,7 +250,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label for="IdTipo_op">Tipo OP para actas finiquito*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_acta_finiquito, settings =>
@@ -265,7 +289,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label for="IdTipo_op">Tipo OP para liquidacion vacaciones*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op_vacaciones, settings =>
@@ -289,6 +313,9 @@
                         </div>
                     </div>
                 </div>
+
+
+                
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tab_param_rubros">
