--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/_GridViewPartial_prestamos_aprobacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/_GridViewPartial_prestamos_aprobacion.cshtml
@@ -3,14 +3,29 @@
         var grid = Html.DevExpress().GridView(settings => {
             settings.Name = "GridViewPartial_prestamos_aprobacion";
             settings.CallbackRouteValues = new { Controller = "PrestamosAprobacion", Action = "GridViewPartial_prestamos_aprobacion", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+            settings.KeyFieldName = "IdPrestamo";
 
             settings.Width = Unit.Percentage(100);
-            settings.KeyFieldName = "IdPrestamo";
+
+            settings.SettingsPager.Visible = true;
+            settings.Settings.ShowGroupPanel = false;
+            settings.Settings.ShowFilterRow = true;
+            settings.SettingsBehavior.AllowSelectByRowClick = false;
+            settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
             //Configuración para que la grilla no muestre texto completo
             settings.SettingsBehavior.AllowEllipsisInText = true;
             settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-            settings.Width = Unit.Percentage(100);
+
+            //Configuración checkbox
+            settings.CommandColumn.Visible = true;
+            settings.CommandColumn.ShowSelectCheckbox = true;
+            settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+
+            //Configuración click derecho
+            settings.SettingsContextMenu.Enabled = true;
+            settings.SettingsBehavior.EnableCustomizationWindow = true;
+            settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
 
             //Configuracion responsive
             settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -18,77 +33,6 @@
             settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
             settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
             settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-
-
-            settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-            settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-            settings.Settings.VerticalScrollableHeight = 400;
-            settings.SettingsPager.Visible = true;
-            settings.SettingsPager.PageSize = 10;
-            settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-            settings.SettingsPager.AlwaysShowPager = true;
-
-
-            settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-            settings.Settings.ShowFilterRow = true;
-            settings.Settings.ShowHeaderFilterButton = true;
-            settings.SettingsBehavior.AllowSelectByRowClick = true;
-
-            //Configuración checkbox
-            settings.CommandColumn.Visible = true;
-            settings.CommandColumn.ShowSelectCheckbox = true;
-            settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
-
-            settings.SettingsExport.EnableClientSideExportAPI = true;
-            settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-            settings.Toolbars.Add(t =>
-            {
-                t.EnableAdaptivity = true;
-                t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-                t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-                t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-                t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-                t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-                t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-            });
-            settings.SettingsExport.RenderBrick = (sender, e) =>
-            {
-                if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                    e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-            };
-            settings.HtmlRowPrepared = (s, e) =>
-            {
-                if (Convert.ToString(e.GetValue("Estado")) == "I")
-                {
-                    e.Row.ForeColor = System.Drawing.Color.Red;
-                }
-            };
-            settings.Columns.Add(c =>
-            {
-                c.Caption = "#";
-                c.SetDataItemTemplateContent(tc =>
-                {
-                    if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToInt32(DataBinder.Eval(tc.DataItem, "TotalCobrado")) == 0)
-                    {
-                        ViewContext.Writer.Write(
-                             Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdPrestamo = DataBinder.Eval(tc.DataItem, "IdPrestamo") }) + "&nbsp;" +
-                             Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdPrestamo = DataBinder.Eval(tc.DataItem, "IdPrestamo") },
-                                new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                        );
-                    }
-
-                });
-                c.SetHeaderTemplateContent(tc =>
-                {
-                    ViewContext.Writer.Write(
-                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString() + "&nbsp;" + "&nbsp;"
-                    );
-
-                });
-                c.Settings.AllowDragDrop = DefaultBoolean.False;
-                c.Settings.AllowSort = DefaultBoolean.False;
-                c.Width = Unit.Pixel(125);
-            });
 
             settings.Columns.Add("IdPrestamo","ID").Width=Unit.Percentage(5);
             settings.Columns.Add("pe_nombre_completo","Empleado").Width = Unit.Percentage(27);
