--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
@@ -139,7 +139,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("aprobar", "AprobacionPrestamo", new { Area = "RRHH" })',
+            url: '@Url.Action("aprobar", "PrestamosAprobacion", new { Area = "RRHH" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
