--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/_GridViewPartial_prestamos_aprobacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/_GridViewPartial_prestamos_aprobacion.cshtml
@@ -1,118 +1,91 @@
 @using System.Web.UI.WebControls;
-    @{
-        var grid = Html.DevExpress().GridView(settings => {
-            settings.Name = "GridViewPartial_prestamos_aprobacion";
-            settings.CallbackRouteValues = new { Controller = "PrestamosAprobacion", Action = "GridViewPartial_prestamos_aprobacion", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
-            settings.KeyFieldName = "IdPrestamo";
+@{
+    var grid = Html.DevExpress().GridView(settings =>
+    {
+        settings.Name = "GridViewPartial_prestamos_aprobacion";
+        settings.CallbackRouteValues = new { Controller = "PrestamosAprobacion", Action = "GridViewPartial_prestamos_aprobacion", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.KeyFieldName = "IdPrestamo";
 
-            settings.Width = Unit.Percentage(100);
+        settings.Width = Unit.Percentage(100);
 
-            settings.SettingsPager.Visible = true;
-            settings.Settings.ShowGroupPanel = false;
-            settings.Settings.ShowFilterRow = true;
-            settings.SettingsBehavior.AllowSelectByRowClick = false;
-            settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
-            //Configuración para que la grilla no muestre texto completo
-            settings.SettingsBehavior.AllowEllipsisInText = true;
-            settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
-            //Configuración checkbox
-            settings.CommandColumn.Visible = true;
-            settings.CommandColumn.ShowSelectCheckbox = true;
-            settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
 
-            //Configuración click derecho
-            settings.SettingsContextMenu.Enabled = true;
-            settings.SettingsBehavior.EnableCustomizationWindow = true;
-            settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
+        //Configuración click derecho
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
 
-            //Configuracion responsive
-            settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-            settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-            settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-            settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-            settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        //Configuracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-            settings.Columns.Add("IdPrestamo","ID").Width=Unit.Percentage(5);
-            settings.Columns.Add("pe_nombre_completo","Empleado").Width = Unit.Percentage(27);
-            settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(10);
-            settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
-            settings.Columns.Add(column =>
+        settings.Columns.Add("IdPrestamo", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("pe_nombre_completo", "Empleado").Width = Unit.Percentage(20);
+        settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(10);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Fecha_PriPago";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(10);
+            column.PropertiesEdit.DisplayFormatString = "d";
+            column.EditorProperties().DateEdit(sp =>
             {
-                column.FieldName = "Fecha_PriPago";
-                column.Caption = "Fecha";
-                column.Width = Unit.Percentage(8);
                 column.PropertiesEdit.DisplayFormatString = "d";
-                column.EditorProperties().DateEdit(sp =>
-                {
-                    column.PropertiesEdit.DisplayFormatString = "d";
-                    sp.Width = Unit.Percentage(100);
-                });
+                sp.Width = Unit.Percentage(100);
             });
-            settings.Columns.Add(column =>
-            {
-                column.FieldName = "MontoSol";
-                column.Caption = "$Monto";
-                column.Width = Unit.Percentage(8);
-                column.EditorProperties().SpinEdit(sp =>
-                {
-                    sp.MinValue = 0;
-                    sp.MaxValue = 999999999;
-                    sp.Width = Unit.Percentage(100);
-                    column.PropertiesEdit.DisplayFormatString = "n2";
-
-                });
-            });
-            settings.Columns.Add(column =>
-            {
-                column.FieldName = "TotalCobrado";
-                column.Caption = "$Cobrado";
-                column.Width = Unit.Percentage(8);
-                column.EditorProperties().SpinEdit(sp =>
-                {
-                    sp.MinValue = 0;
-                    sp.MaxValue = 999999999;
-                    sp.Width = Unit.Percentage(100);
-                    column.PropertiesEdit.DisplayFormatString = "n2";
-
-                });
-            });
-            settings.Columns.Add(column =>
-            {
-                column.FieldName = "Valor_pendiente";
-                column.Caption = "$Pendiente";
-                column.Width = Unit.Percentage(8);
-                column.EditorProperties().SpinEdit(sp =>
-                {
-                    sp.MinValue = 0;
-                    sp.MaxValue = 999999999;
-                    sp.Width = Unit.Percentage(100);
-                    column.PropertiesEdit.DisplayFormatString = "n2";
-
-                });
-            });
-            settings.Columns.Add(column =>
-            {
-                column.FieldName = "EstadoBool";
-                column.Caption = "Estado";
-                column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-                column.EditorProperties().CheckBox(sp =>
-                {
-
-                });
-            });
-            settings.Columns.Add(column =>
-            {
-                column.SetDataItemTemplateContent(c =>
-                {
-                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_008", "RRHHReportes", new { Area = "Reportes", IdPrestamo = DataBinder.Eval(c.DataItem, "IdPrestamo") }, Request.Url.Scheme) + "');\"></span>");
-                });
-                column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
-            });
-
-            settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
-            settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "MontoSol";
+            column.Caption = "$Monto";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_008", "RRHHReportes", new { Area = "Reportes", IdPrestamo = DataBinder.Eval(c.DataItem, "IdPrestamo") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
+
+        settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
+        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+    });
 }
 @grid.Bind(Model).GetHtml()
