--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_CmbRubro_Prestamos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_CmbRubro_Prestamos.cshtml
@@ -13,7 +13,7 @@
         settings.Properties.TextField = "ru_descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdRubro";
-        settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.ValueType = typeof(string);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
 
