--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Abono.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Abono.cshtml
@@ -9,7 +9,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Anular", "Prestamos", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Abono", "Prestamos", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdPrestamo);
     @Html.HiddenFor(q => q.IdTransaccionSession);
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
 
                 <div class="form-group">
                     <label for="IdProveedor">Empleado*</label>
@@ -25,25 +25,22 @@
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdCtaCblePadre">Rubro*</label>
-                    @Html.Partial("_CmbRubro_Prestamos", Model)
-                    @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="IdCtaCblePadre">Rubro*</label>
+                        @Html.Partial("_CmbRubro_Prestamos", Model)
+                        @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="Valor">Monto solicitado*</label>
-                    @Html.TextBoxFor(q => q.MontoSol, new { @class = "form-control", @id = "MontoSol" })
+                    @Html.TextBoxFor(q => q.MontoSol, new { @class = "form-control", @id = "MontoSol",   })
                     @Html.ValidationMessageFor(q => q.MontoSol, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -74,48 +71,9 @@
                     @Html.ValidationMessageFor(q => q.NumCuotas, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="descuento_mensual">Descuento</label>
-                        @Html.DevExpress().RadioButtonFor(q => q.descuento_mensual, settings =>
-                       {
-                           settings.Name = "descuento_mensual";
-                           settings.GroupName = "formapao";
-                           settings.Text = "Fin de mes";
-
-                       }).GetHtml()
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="descuento_quincena">Descuento</label>
-                        @Html.DevExpress().RadioButtonFor(q => q.descuento_quincena, settings =>
-                   {
-                       settings.Name = "descuento_quincena";
-                       settings.GroupName = "formapao";
-                       settings.Text = "Quincena";
-                   }).GetHtml()
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="descuento_men_quin">Descuentos</label>
-                        @Html.DevExpress().RadioButtonFor(q => q.descuento_men_quin, settings =>
-                   {
-                       settings.Name = "descuento_men_quin";
-                       settings.GroupName = "formapao";
-                       settings.Text = "Quincena y fin de mes";
-
-                   }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
+            
+           
+           
         </div>
 
     </div>
@@ -145,7 +103,7 @@
 
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","Prestamos",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
 
